--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -792,8 +792,12 @@ header nav {
   background-image: url("../img/gospel.png");
   background-size: cover;
   background-position: center 60%;
-  background-attachment: fixed;
   background-repeat: no-repeat;
+}
+@media (min-width: 768px) {
+  .parallax.gospel {
+    background-attachment: fixed;
+  }
 }
 @media (min-width: 1440px) {
   .parallax.gospel {
