--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,5 +1,3 @@
-body { overflow-x: hidden; }
-
 // ===== START HEADER ===== //
 header {
   z-index: 1030;
@@ -147,15 +145,15 @@ header nav {
   h4 { margin-bottom: 30px; }
 }
 
-#visit:before {
-  content: "";
-  position: absolute;
-  bottom: -486px;
-  left: -200px;
-  height: 830px;
-  width: 781px;
-  background: url('../img/visit-bg-left.png') center center / cover no-repeat;
-}
+// #visit:before {
+//   content: "none";
+//   position: absolute;
+//   bottom: -486px;
+//   left: -200px;
+//   height: 830px;
+//   width: 781px;
+//   background: url('../img/visit-bg-left.png') center center / cover no-repeat;
+// }
 #visit {
   position: relative;
   z-index: 1;
@@ -164,15 +162,15 @@ header nav {
   .container { padding-bottom: 70px; }
   .content-wrapper { max-width: 1069px; }
 }
-#visit:after {
-  content: "";
-  position: absolute;
-  top: -860px;
-  right: -170px;
-  height: 1173px;
-  width: 690px;
-  background: url('../img/visit-bg-right.png') center center / cover no-repeat;
-}
+// #visit:after {
+//   content: "none";
+//   position: absolute;
+//   top: -860px;
+//   right: -170px;
+//   height: 1173px;
+//   width: 690px;
+//   background: url('../img/visit-bg-right.png') center center / cover no-repeat;
+// }
 
 #volunteer {
   padding: 0 0 100px;
