--- a/assets/scss/_theme.scss
+++ b/assets/scss/_theme.scss
@@ -70,7 +70,7 @@ header {
 
 .parallax.gospel {
   height: 465px; // adjust based on visual target area
-  background-image: url('../img/gospel.png');
+  background-image: url('../img/gospel.jpg');
   background-size: cover;
   background-position: center 60%;
   background-repeat: no-repeat;
