--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -780,7 +780,7 @@ header nav {
 
 .parallax.gospel {
   height: 465px;
-  background-image: url("../img/gospel.png");
+  background-image: url("../img/gospel.jpg");
   background-size: cover;
   background-position: center 60%;
   background-repeat: no-repeat;
