--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -4,6 +4,21 @@ body {
   background-color: #fcfcfc;
   color: #212529;
 }
+h1 {
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 36px;
+  letter-spacing: 0;
+  @media (min-width: 768px) {
+    font-size: 40px;
+    line-height: 48px;
+  }
+  @media (min-width: 1200px) {
+    font-size: 80px;
+    line-height: 96px;
+  }
+}
+
 
 // main { overflow: hidden; }
 
@@ -95,12 +110,6 @@ a.create-account:hover {
 
 // ===== HERO CONTENT ===== //
 .hero-content {
-  h1 {
-    font-weight: 900;
-    font-size: 30px;
-    line-height: 36px;
-    letter-spacing: 0;
-  }
   p {
     font-weight: 500;
     font-size: 14px;
@@ -109,20 +118,12 @@ a.create-account:hover {
     box-shadow: 0px 3px 25px 0px rgba(0,0,0,.25);
   }
   @media (min-width: 768px) {
-    h1 {
-      font-size: 40px;
-      line-height: 48px;
-    }
     p {
       font-size: 18px;
       line-height: 24px;
     }
   }
   @media (min-width: 1200px) {
-    h1 {
-      font-size: 80px;
-      line-height: 96px;
-    }
     p {
       font-size: 36px;
       line-height: 48px;
