--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -4,7 +4,7 @@ body {
   background-color: #fcfcfc;
   color: #212529;
 }
-h1 {
+h1, section h1 {
   font-weight: 900;
   font-size: 30px;
   line-height: 36px;
