--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,20 +5,20 @@ body {
   color: #212529;
 }
 
-h1 {
+h1, section h1 {
   font-weight: 900;
   font-size: 30px;
   line-height: 36px;
   letter-spacing: 0;
 }
 @media (min-width: 768px) {
-  h1 {
+  h1, section h1 {
     font-size: 40px;
     line-height: 48px;
   }
 }
 @media (min-width: 1200px) {
-  h1 {
+  h1, section h1 {
     font-size: 80px;
     line-height: 96px;
   }
