--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -130,6 +130,7 @@ header nav {
   right: 0;
   left: 0;
   margin: auto;
+  vertical-align: top;
 }
 .mission-cards { margin-bottom: 130px; }
 .mission-card {
