--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -404,7 +404,7 @@ footer {
     }
     a:hover { color: rgba(235, 51, 0, 1);}
   }
-  h6 {
+  .footer-links-heading {
     font-weight: 700;
     font-size: 20px;
     line-height: 32px;
